--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,19 +318,19 @@ header .navbar ul li a:hover {
   background-color: #0685da;
 }
 .social-icons a.github:hover {
-  background-color: #0e0e0e;
+  background-color: #fc8c05;
 }
-.social-icons a.twitter:hover {
-  background-color: #00aced;
+.social-icons a.googleplus:hover {
+  background-color: #fc8c05;
 }
-.social-icons a.linkedin:hover {
-  background-color: #007bb6;
+.social-icons a.facebook:hover {
+  background-color: #fc8c05;
 }
 .social-icons a.dev:hover {
-  background-color: #070707;
+  background-color: #fc8c05;
 }
 .social-icons a.instagram:hover {
-  background-color: #ee00da;
+  background-color: #fc8c05;
 }
 /* social icons end */
 
@@ -435,7 +435,7 @@ header .navbar ul li a:hover {
   border-radius: 0.5em;
   transition: 0.3s;
   color: #fff;
-  background: #2506ad;
+  background: #ff7b00;
   box-shadow: 0px 5px 10px rgba(48, 68, 247, 0.6);
   font-family: "Nunito", sans-serif;
 }
